...
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_container"
            android:text="@string/your_profile"
            android:textSize="@dimen/large_font_size"/>
...
                android:layout_below="@+id/imageView"
                android:layout_marginTop="@dimen/margin_container"
                android:text="@string/name"
                android:textSize="@dimen/small_font_size"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_toRightOf="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_container"
...
