...
    <string name="key_textview_text">texty text</string>
    <string name="title_activity_thanks">Thanks</string>
    <string name="thanks">"Thanks For Signing Up "</string>
    <string name="DOB">Date Of Birth</string>
    <string name="bio">Bio</string>
    <string name="occupation">Occupation</string>
    <string name="your_profile">Your Profile!</string>
    <string name="age">Age</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_matches">Matches</string>
    <string name="nav_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
...
